--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                             <li class="nav-item" role="presentation"><a class="nav-link" href="#team">Our Team</a></li>
                             <li class="nav-item" role="presentation"><a class="nav-link" href="#team">Stats</a></li>
                             <li class="nav-item" role="presentation"><a class="nav-link" href="#contact">Contact Us</a></li>
-                            <li class="label-sm rounded btn-default" role="presentation"><a class="nav-link" style="color: black;" href="#banner">Code League 2.0</a></li>
+                            <!--<li class="label-sm rounded btn-default" role="presentation"><a class="nav-link" style="color: black;" href="#banner">Code League 2.0</a></li>-->
                         </ul>
                 </div>
         </div>
@@ -117,7 +117,7 @@
             <div class="row" style="height: 550px;margin-right: 0px;margin-left: 0px;">
                 <!-- Start: Text -->
                 <div class="col-12 col-lg-6 col-xl-9 offset-xl-5" style="margin-left: 0px;">
-                    <h2 style="font-size: 60px;">Welcome to the<br>League Of Chandan.</h2>
+                    <h2 style="font-size: 60px;">Welcome to the<br>Mission 2023.</h2>
                     <p class="shadow-none" style="background-color: rgba(255,255,255,0);color: #ffffff;filter: brightness(190%) contrast(200%) grayscale(83%) hue-rotate(0deg) saturate(200%);"><br></p>
                     <p class="text-left shadow-none" style="background-color: rgba(255,255,255,0);color: #ffffff;filter: brightness(190%) contrast(200%) grayscale(83%) hue-rotate(0deg) saturate(200%);width: 300px;">A community of students for the upliftment of the coding culture.</p>
                     <a href="#about"><button class="btn btn-light btn-lg action-button" type="button">Know More</button></a></div>
@@ -231,7 +231,7 @@
             <!-- Start: People -->
             <div class="row justify-content-center align-items-center people">
                 <div class="col-md-6 col-lg-4 item">
-                    <div class="border rounded shadow-sm box" style="background-color: rgb(42,42,42);background-image: url(&quot;/assets/img/view-of-airport-247791.jpg&quot;);filter: blur(0px) brightness(100%) grayscale(10%);"><img class="rounded-circle" src="/assets/img/male.jpeg">
+                    <div class="border rounded shadow-sm box" style="background-color: rgb(42,42,42);background-image: url(&quot;/assets/img/view-of-airport-247791.jpg&quot;);filter: blur(0px) brightness(100%) grayscale(10%);"><img class="rounded-circle" src="/assets/img/letter-c.jpg">
                         <h3 class="name" style="color: rgb(255,255,255);">Chandan</h3>
                         <p class="title">PRESIDENT</p>
                         <p class="description" style="color: rgb(255,255,255);filter: brightness(200%) contrast(200%);opacity: 1;">Shy with people, harsh with code; he is the perfect lead for our team. His achievements will surely amaze you.</p>
@@ -241,7 +241,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 item">
-                    <div class="border rounded shadow-sm box" style="background-color: rgb(42,42,42);background-image: url(&quot;/assets/img/view-of-airport-247791.jpg&quot;);filter: blur(0px) brightness(100%) grayscale(10%);"><img class="rounded-circle" src="/assets/img/male.jpeg">
+                    <div class="border rounded shadow-sm box" style="background-color: rgb(42,42,42);background-image: url(&quot;/assets/img/view-of-airport-247791.jpg&quot;);filter: blur(0px) brightness(100%) grayscale(10%);"><img class="rounded-circle" src="/assets/img/letter-r.jpg">
                         <h3 class="name" style="color: rgb(255,255,255);">Rohit</h3>
                         <p class="title">VICE-PRESIDENT</p>
                         <p class="text-center description" style="color: rgb(255,255,255);filter: brightness(200%) contrast(200%);opacity: 1;">From getting partnerships to oranising competitions to designing our content, he is the goto person for one all.</p>
@@ -263,35 +263,35 @@
 		 <div id="demo" >
             <div class="row justify-content-center align-items-center people">
                 <div class="col-md-6 col-lg-4 item">
-                    <div class="border rounded shadow-sm box" style="background-color: rgb(42,42,42);background-image: url(&quot;/assets/img/view-of-airport-247791.jpg&quot;);filter: blur(0px) brightness(100%) grayscale(10%);"><img class="rounded-circle" src="/assets/img/male.jpeg">
+                    <div class="border rounded shadow-sm box" style="background-color: rgb(42,42,42);background-image: url(&quot;/assets/img/view-of-airport-247791.jpg&quot;);filter: blur(0px) brightness(100%) grayscale(10%);"><img class="rounded-circle" src="/assets/img/letter-s.jpg">
                         <h3 class="name" style="color: rgb(255,255,255);">Sai Naik</h3>
                         <p class="title">TEAM LEAD</p>
                         <p class="description" style="color: rgb(255,255,255);filter: brightness(200%) contrast(200%);opacity: 1;">He can blabber code all day, but will never come to a final conclusion. Math he involves is uncomparable.</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 item">
-                    <div class="border rounded shadow-sm box" style="background-color: rgb(42,42,42);background-image: url(&quot;/assets/img/view-of-airport-247791.jpg&quot;);filter: blur(0px) brightness(100%) grayscale(10%);"><img class="rounded-circle" src="/assets/img/male.jpeg">
+                    <div class="border rounded shadow-sm box" style="background-color: rgb(42,42,42);background-image: url(&quot;/assets/img/view-of-airport-247791.jpg&quot;);filter: blur(0px) brightness(100%) grayscale(10%);"><img class="rounded-circle" src="/assets/img/letter-s.jpg">
                         <h3 class="name" style="color: rgb(255,255,255);">Srikanth</h3>
                         <p class="title">TEAM LEAD</p>
                         <p class="text-center description" style="color: rgb(255,255,255);filter: brightness(200%) contrast(200%);opacity: 1;">Our pride and our comedian. He never gives up on a challenge and that applies to pulling legs too.</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 item">
-                    <div class="border rounded shadow-sm box" style="background-color: rgb(42,42,42);background-image: url(&quot;/assets/img/view-of-airport-247791.jpg&quot;);filter: blur(0px) brightness(100%) grayscale(10%);"><img class="rounded-circle" src="/assets/img/male.jpeg">
-                        <h3 class="name" style="color: rgb(255,255,255);">Naga Sai</h3>
+                    <div class="border rounded shadow-sm box" style="background-color: rgb(42,42,42);background-image: url(&quot;/assets/img/view-of-airport-247791.jpg&quot;);filter: blur(0px) brightness(100%) grayscale(10%);"><img class="rounded-circle" src="/assets/img/letter-s.jpg">
+                        <h3 class="name" style="color: rgb(255,255,255);">Sai Krishna</h3>
                         <p class="title">TEAM LEAD</p>
                         <p class="text-center description" style="color: rgb(255,255,255);filter: brightness(200%) contrast(200%);opacity: 1;">The most intelligent of all, credits to his laziness. He is potential of solving the toughest problems. *T&C apply.</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 item">
-                    <div class="border rounded shadow-sm box" style="background-color: rgb(42,42,42);background-image: url(&quot;/assets/img/view-of-airport-247791.jpg&quot;);filter: blur(0px) brightness(100%) grayscale(10%);"><img class="rounded-circle" src="/assets/img/male.jpeg">
-                        <h3 class="name" style="color: rgb(255,255,255);">Jaswanth</h3>
+                    <div class="border rounded shadow-sm box" style="background-color: rgb(42,42,42);background-image: url(&quot;/assets/img/view-of-airport-247791.jpg&quot;);filter: blur(0px) brightness(100%) grayscale(10%);"><img class="rounded-circle" src="/assets/img/letter-h.jpg">
+                        <h3 class="name" style="color: rgb(255,255,255);">Hemanth</h3>
                         <p class="title">LEAD, WEB DESIGN</p>
                         <p class="text-center description" style="color: rgb(255,255,255);filter: brightness(200%) contrast(200%);opacity: 1;">If you are here today, it is because of him. The back bone of our aesthetics, the most valuable asset.</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 item">
-                    <div class="border rounded shadow-sm box" style="background-color: rgb(42,42,42);background-image: url(&quot;/assets/img/view-of-airport-247791.jpg&quot;);filter: blur(0px) brightness(100%) grayscale(10%);"><img class="rounded-circle" src="/assets/img/female.jpeg">
+                    <div class="border rounded shadow-sm box" style="background-color: rgb(42,42,42);background-image: url(&quot;/assets/img/view-of-airport-247791.jpg&quot;);filter: blur(0px) brightness(100%) grayscale(10%);"><img class="rounded-circle" src="/assets/img/letter-g.jpg">
                         <h3 class="name" style="color: rgb(255,255,255);">Gayatri</h3>
                         <p class="title">TEAM LEAD</p>
                         <p class="text-center description" style="color: rgb(255,255,255);filter: brightness(200%) contrast(200%);opacity: 1;">A still tongue has a wise brain. We believe that applies to her aptly. The most determined of us all.</p>
