-> Heading is changed -> Names are changed -> Photoes are changed -> Button and Popup regarding to league 2.0 is removed

--- a/index.html
+++ b/index.html
@@ -267,6 +267,8 @@
                         <h3 class="name" style="color: rgb(255,255,255);">Sai Naik</h3>
                         <p class="title">TEAM LEAD</p>
                         <p class="description" style="color: rgb(255,255,255);filter: brightness(200%) contrast(200%);opacity: 1;">He can blabber code all day, but will never come to a final conclusion. Math he involves is uncomparable.</p>
+                        <div class="social"><a href="https://www.hackerrank.com/SaiNaik_Jatavath" target="_blank"><i class="fas fa-laptop-code"></i></a><a href="https://wa.me/9550813178" target="_blank"><i class="fa fa-whatsapp"></i></a>
+                    </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 item">
@@ -274,6 +276,8 @@
                         <h3 class="name" style="color: rgb(255,255,255);">Srikanth</h3>
                         <p class="title">TEAM LEAD</p>
                         <p class="text-center description" style="color: rgb(255,255,255);filter: brightness(200%) contrast(200%);opacity: 1;">Our pride and our comedian. He never gives up on a challenge and that applies to pulling legs too.</p>
+                        <div class="social"><a href="https://www.hackerrank.com/SaiNaik_Jatavath" target="_blank"><i class="fas fa-laptop-code"></i></a><a href="https://wa.me/7093021598" target="_blank"><i class="fa fa-whatsapp"></i></a>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 item">
@@ -281,6 +285,8 @@
                         <h3 class="name" style="color: rgb(255,255,255);">Sai Krishna</h3>
                         <p class="title">TEAM LEAD</p>
                         <p class="text-center description" style="color: rgb(255,255,255);filter: brightness(200%) contrast(200%);opacity: 1;">The most intelligent of all, credits to his laziness. He is potential of solving the toughest problems. *T&C apply.</p>
+                        <div class="social"><a href="https://www.hackerrank.com/SaiNaik_Jatavath" target="_blank"><i class="fas fa-laptop-code"></i></a><a href="https://wa.me/7093021598" target="_blank"><i class="fa fa-whatsapp"></i></a>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 item">
